<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" android:orientation="vertical"
    tools:context=".CalcActivity" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://schemas.android.com/apk/res/android ">

    <TextView android:layout_width="fill_parent" android:layout_height="120dp" android:text="0"
        android:id="@+id/textView" android:textSize="@dimen/abc_text_size_display_3_material"
        android:textStyle="bold" android:gravity="right" android:padding="20dp" />

    <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:shrinkColumns="*" android:stretchColumns="*" android:layout_below="@+id/textView"
        android:orientation="vertical">

        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent"
            android:weightSum="4">
            <Button android:text="9" android:id="@+id/btn9"
                android:textSize="@dimen/abc_text_size_display_3_material" android:onClick="handleClick" />
            <Button android:text="8" android:id="@+id/btn8"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
            <Button android:text="7" android:id="@+id/btn7"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
            <Button android:text="/" android:id="@+id/divide"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent"
            android:weightSum="4">
            <Button android:text="6" android:id="@+id/btn6"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
            <Button android:text="5" android:id="@+id/btn5"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
            <Button android:text="4" android:id="@+id/btn4"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
            <Button android:text="X" android:id="@+id/multiply"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent"
            android:weightSum="4">
            <Button android:text="3" android:id="@+id/btn3"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
            <Button android:text="2" android:id="@+id/btn2"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
            <Button android:text="1" android:id="@+id/btn1"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
            <Button android:text="-" android:id="@+id/subtract"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent"
            android:weightSum="4">
            <Button android:text="0" android:id="@+id/btn0" android:layout_span="2"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
            <Button android:text="=" android:id="@+id/equals"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
            <Button android:text="+" android:id="@+id/add"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:onClick="handleClick" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
